# speexdsp

./: CMakeLists.txt
libspeexdsp/: config.h  resample_neon.h
